Fix link address in header
fix font size text in footer

--- a/task3/index.html
+++ b/task3/index.html
@@ -42,7 +42,7 @@
 						<a class="header-links__link" href="../task2/index.html">Задача 2</a>
 					</li>
 					<li class="header-links__item">
-						<a class="header-links__link" href="/">Задача 3</a>
+						<a class="header-links__link" href="#">Задача 3</a>
 					</li>
 					<li class="header-links__item">
 						<a class="header-links__link" href="../task4/index.html">Задача 4</a>
