--- a/task4/index.html
+++ b/task4/index.html
@@ -45,7 +45,7 @@
 						<a class="header-links__link" href="../task3/index.html">Задача 3</a>
 					</li>
 					<li class="header-links__item">
-						<a class="header-links__link" href="/">Задача 4</a>
+						<a class="header-links__link" href="#">Задача 4</a>
 					</li>
 					<li class="header-links__item">
 						<a class="header-links__link" href="../task5/index.html">Задача 5</a>
