--- a/task5/index.html
+++ b/task5/index.html
@@ -48,7 +48,7 @@
 						<a class="header-links__link" href="../task4/index.html">Задача 4</a>
 					</li>
 					<li class="header-links__item">
-						<a class="header-links__link" href="/">Задача 5</a>
+						<a class="header-links__link" href="#">Задача 5</a>
 					</li>
 				</ul>
 			</nav>
