--- a/task1/index.html
+++ b/task1/index.html
@@ -36,7 +36,7 @@
 						</a>
 					</li>
 					<li class="header-links__item">
-						<a class="header-links__link" href="/">Задача 1</a>
+						<a class="header-links__link" href="#">Задача 1</a>
 					</li>
 					<li class="header-links__item">
 						<a class="header-links__link" href="../task2/index.html">Задача 2</a>
