--- a/task2/index.html
+++ b/task2/index.html
@@ -39,7 +39,7 @@
 						<a class="header-links__link" href="../task1/index.html">Задача 1</a>
 					</li>
 					<li class="header-links__item">
-						<a class="header-links__link" href="/">Задача 2</a>
+						<a class="header-links__link" href="#">Задача 2</a>
 					</li>
 					<li class="header-links__item">
 						<a class="header-links__link" href="../task3/index.html">Задача 3</a>
