Сompleted task 'improved traffic light'

--- a/task3/index.html
+++ b/task3/index.html
@@ -63,9 +63,11 @@
 				</section>
 				<section class="practical-work__task task_2">
 					<h3 class="task_2__subtitle">Светофор модифицированный</h3>
-					<div class="task_2__item task_2__item_1"></div>
-					<div class="task_2__item task_2__item_2"></div>
-					<div class="task_2__item task_2__item_3"></div>
+					<div class="task_2__item-container">
+						<div class="task_2__item task_2__item_1"></div>
+						<div class="task_2__item task_2__item_2"></div>
+						<div class="task_2__item task_2__item_3"></div>
+					</div>
 				</section>
 			</article>
 		</main>
