Fix link address in task-4

--- a/task4/index.html
+++ b/task4/index.html
@@ -58,7 +58,7 @@
 			<article class="practical-work">
 				<h2 class="practical-work__title">Задача 4 — Ввод текста</h2>
 				<section class="practical-work__task task">
-					<a class="task__link" href="/">Ссылка</a>
+					<a class="task__link" href="#">Ссылка</a>
 				</section>
 			</article>
 		</main>
