--- a/task4/index.html
+++ b/task4/index.html
@@ -57,9 +57,9 @@
 		<main class="content">
 			<article class="practical-work">
 				<h2 class="practical-work__title">Задача 4 — Ввод текста</h2>
-				<section class="practical-work__task task">
+				<div class="practical-work__task task">
 					<a class="task__link" href="#">Ссылка</a>
-				</section>
+				</div>
 			</article>
 		</main>
 
@@ -89,7 +89,7 @@
 				</ul>
 			</nav>
 			<div class="footer__text">
-				<p>&copy 2022 Все права защищены, <span>JS-Старт</span></p>
+				<p>&copy; 2022 Все права защищены, <span>JS-Старт</span></p>
 			</div>
 		</footer>
 
