--- a/task5/index.html
+++ b/task5/index.html
@@ -108,7 +108,7 @@
 				</ul>
 			</nav>
 			<div class="footer__text">
-				<p>&copy 2022 Все права защищены, <span>JS-Старт</span></p>
+				<p>&copy; 2022 Все права защищены, <span>JS-Старт</span></p>
 			</div>
 		</footer>
 
