Fix error 'symbol in code-block'

--- a/task2/index.html
+++ b/task2/index.html
@@ -120,11 +120,11 @@
 							<p>alert('Вы указали не число');</p>
 							<p>} else if (birthYear > 2022) {</p>
 							<p>alert('Вы из будущего!');</p>
-							<p>} else if (birthYear < 1922) {</p>
-									<p>alert('Ого! Вот это вы долгожитель!');</p>
-									<p>} else {</p>
-									<p>alert(`Вам ${yourAge} лет(год)`);</p>
-									<p>}</p>
+							<p>} else if (birthYear &lt; 1922) {</p>
+							<p>alert('Ого! Вот это вы долгожитель!');</p>
+							<p>} else {</p>
+							<p>alert(`Вам ${yourAge} лет(год)`);</p>
+							<p>}</p>
 						</div>
 					</div>
 				</section>
